--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <div><font color="#696969" size="5">Інфантильність міленіалів і їхнє постійне бажання сховатися від реальності надихає дизайнерів на створення образів, які, на перший погляд, навряд чи можуть знадобитися в реальному житті, а саме – суконь, що нагадують тістечка. Однак пишні вбрання, прикрашені воланами або просто наповнені повітрям, все частіше трапляються на вулицях. Наступної весни найромантичніші з них варто</font></div>
 </td>
 <td align="center" valign="middle" width="450" height="500" colspan="1" >
-<img alt="model" width="280" height="400" src="model1.JPG">
+<img alt="model" width="280" height="400" src="model1.jpg">
 </td>
 </tr>
 <tr>
 <td align="center" valign="middle" width="450" height="500" colspan="1">
-<img alt="model" width="280" height="400" src="model2.JPG">
+<img alt="model" width="280" height="400" src="model2.jpg">
 </td>
 <td align="center" valign="middle" width="900" height="500" colspan="2">
 <p><font color="#2F4F4F" size="6"><b>Мотузка замість пояса</b></font></p>
