--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <td background="fon.jpg" colspan="3" height="300">
 <h1 align="center"><font color="#8B0000" size="7">Moda</font></h1>
 <p align="center"><font color="#8B0000" size="5"><b>Весна-літо 2020</b></font></p>
-<p align="center"><input  type="button" value="Назад" onclick="location.href='index1.html'">
+<p align="center"><input  type="button" value="Назад" onclick="location.href='index.html'">
 <font color="#8B0000" size="2">1 <b><u>2</u></b> 3</font>
 <input  type="button" value="Вперед" onclick="location.href='index3.html'"></p>
 </td>
@@ -20,12 +20,12 @@
 <div><font color="#696969" size="5">Денім надалі підкорює модні серця. На останніх Тижнях моди йому присвятили нові колекції навіть такі бренди, як <b>Celine</b>, <b>Givenchy</b> і <b>Brandon Maxwell</b>, що зазвичай працюють в іншому напрямку.</font></div>
 </td>
 <td align="center" valign="middle" width="450" height="500" colspan="1" >
-<img alt="model" width="280" height="400" src="model3.JPG">
+<img alt="model" width="280" height="400" src="model3.jpg">
 </td>
 </tr>
 <tr>
 <td align="center" valign="middle" width="450" height="500" colspan="1">
-<img alt="model" width="280" height="400" src="model4.JPG">
+<img alt="model" width="280" height="400" src="model4.jpg">
 </td>
 <td align="center" valign="middle" width="900" height="500" colspan="2">
 <p><font color="#2F4F4F" size="6"><b>Асиметричні рюші</b></font></p>
