--- a/index3.html
+++ b/index3.html
@@ -19,12 +19,12 @@
 <div><font color="#696969" size="5">Сезон <b>весна-літо 2020</b> дає ще один шанс полюбити плісировку. У колекціях дизайнерів з’явилися всілякі варіації на тему цього жіночного тренду — від дрібної складки, подібної до гофрованого паперу, до великих фактурних інтерпретацій.</font></div>
 </td>
 <td align="center" valign="middle" width="450" height="500" colspan="1" >
-<img alt="model" width="280" height="400" src="model5.JPG">
+<img alt="model" width="280" height="400" src="model5.jpg">
 </td>
 </tr>
 <tr>
 <td align="center" valign="middle" width="450" height="500" colspan="1">
-<img alt="model" width="280" height="400" src="model6.JPG">
+<img alt="model" width="280" height="400" src="model6.jpg">
 </td>
 <td align="center" valign="middle" width="900" height="500" colspan="2">
 <p><font color="#2F4F4F" size="6"><b>Тренчкот</b></font></p>
