--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 </tr>
 <tr>
 <td background="fon.jpg" colspan="3" height="300">
-<p align="center"><input  type="button" value="Назад" onclick="location.href='index1.html'">
+<p align="center"><input  type="button" value="Назад" onclick="location.href='index.html'">
 <font color="#8B0000" size="2">1 <b><u>2</u></b> 3</font>
 <input  type="button" value="Вперед" onclick="location.href='index3.html'"></p>
 <p align="center"><font color="#8B0000" size="5"><b>Весна-літо 2020</b></font></p>
